# HachU2025-be

./: .dockerignore  .env.example  .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml
.github/: dependabot.yaml
account/migrations/: 0001_initial.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  user.py
api/: admin.py  urls.py
api/migrations/: 0001_initial.py  0002_diary_image_delete_diaryimage.py  0003_chat_created_at.py  0004_alter_chat_options_schedule.py  0005_diary_title.py  0006_schedule_role_schedule_title.py  0007_remove_diary_one_user_per_date.py  0008_alter_diary_date.py  0009_schedule_is_registered_schedule_suggest_id.py
api/models/: __init__.py  chat.py  diary.py  diary_image.py  diary_tag.py  schedule.py  section.py  tag.py
api/models/choices/: __init__.py  role.py
api/serializers/: chat.py  diary.py  schedule.py  section.py
api/views/: chat.py  diary.py  gen_image.py  schedule.py  section.py  settings.py
hack_u__2025_be/: asgi.py  hashers.py  middleware.py  renderers.py  urls.py  wsgi.py
hack_u__2025_be/settings/: base.py  dev.py  prod.py  test.py  utils.py
scripts/: image_to_text.py  test_ddgs.py  test_serach_api.py  test_weaviate.py
scripts/poc_search_image/: check.py  delete_db.py  set_db.py
src/: gen_schedule_v2.py  image_generator.py  schedule_generator.py
src/rag/: client.py  insert.py  model.py  rag.py  search.py  search_model.py  setup.py  utils.py
